--- a/style.css
+++ b/style.css
@@ -1,21 +1,28 @@
 body {
-  font-family: 'Roboto', sans-serif;;
+  font-family: 'Roboto', sans-serif;
 }
 
 nav li {
   padding-left: 40px;
 }
 
+nav li a{
+  font-size: 1.5em;
+  font-weight: 900;
+}
+
 .big-heading {
   font-family: 'Bebas Neue', cursive;
   font-size: 60px;
-  font-weight: 500;
+  font-weight: lighter;
   line-height: 60px;
   text-transform: uppercase;
 }
 
 h1 {
-  font-weight: 900;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
   font-size: 24px;
   line-height: 28px;
 }
@@ -27,12 +34,9 @@ h1 {
 
 .buy-now-button {
   background-color: rgba(164, 188, 70, 1);
-  font-weight: bolder;
   color: white;
   width: 170px;
   height: 60px;
-  left: 219px;
-  top: 427px;
   border-radius: 10px;
 }
 
@@ -47,7 +51,7 @@ h1 {
   border-radius: 20px;
 }
 
-.penguin-card-footer h2 {
+.penguin-card-footer h1 {
   color: #FABE4C;
   font-weight: 900;
   font-size: 36px;
@@ -67,7 +71,12 @@ h1 {
 }
 
 .contact-us {
-  border-radius: 50px;
+  border-radius: 20px;
   background-color:  #FFFBF0;
+}
+
+.penguin-services {
+  border: none;
+  border-radius: 20px;
 }
 
